Update: app/css/styles_main.css, app/js/selector_source copy.js, app/pages/detect.html, app/pages/status.html

--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -389,7 +389,8 @@ input {
   margin-bottom: 10px;
   flex-wrap: wrap;
 }
-#video-source {
+#video-source,
+#mode-select {
   width: 100%;
   min-width: 215px;
   max-width: 215px;
