--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -214,7 +214,8 @@ input {
   /* Adjusted for horizontal layout */
   /* Adjusted for horizontal layout */
   /* Adjusted for horizontal layout */
-  aspect-ratio: 16/9;
+  /* aspect-ratio: 16/9; */
+  aspect-ratio: 16/5;
   /* aspect-ratio: 16/1; */
   /* Adjusted for horizontal layout */
   /* Adjusted for horizontal layout */
