Update: app/css/styles_main.css, app/js/init_system.js, app/js/main_help.js, app/js/main_tutorial.js, app/js/main_visitor.js, app/pages/help.html, app/pages/tutorial.html, app/pages/visitor.html, index.html

--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -246,7 +246,8 @@ input {
 .group-frame-detect,
 .group-frame-settings,
 .group-frame-tutorial,
-.group-frame-help {
+.group-frame-help,
+.group-frame-visitor {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -268,7 +269,8 @@ input {
 .group-frame-detect label,
 .group-frame-settings label,
 .group-frame-tutorial label,
-.group-frame-help label {
+.group-frame-help label,
+.group-frame-visitor label {
   font-weight: bold;
   margin-right: 10px;
 }
