Update: app/css/styles_main.css, app/js/detect_text.js, app/pages/source.html, app/pages/text.html

--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -390,6 +390,11 @@ input {
   color: #888;
   cursor: auto;
 }
+button:disabled,
+button[disabled] {
+  background-color: #cccccc;
+  color: #888888;
+}
 .spinbox-group {
   width: 100%;
   max-width: 250px;
