--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -307,6 +307,7 @@ input {
   display: flex;
   align-items: center;
 }
+
 .source-section,
 .mode-section,
 .status-section,
@@ -327,23 +328,12 @@ input {
   padding-left: 5px;
   text-align: center;
   justify-content: center;
-  /* display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  gap: 10px;
-  margin: 5px 0 10px 0;
-  padding-left: 5px;
-  text-align: center;
-  justify-content: center;
-  align-items: center; */
 }
 .source-section input,
 .mode-section input,
 .status-section input,
 .text-section input,
 .object-section input {
-  /* width: 100%; */
-  /* max-width: 200px; */
   padding: 8px;
   font-size: 1em;
   border: 2px solid #2980b9;
@@ -351,7 +341,6 @@ input {
   background-color: #fff;
   color: #333;
 }
-
 .controls-section button,
 .source-section button,
 .mode-section button,
@@ -388,13 +377,33 @@ input {
 .mode-section .button-browse,
 .status-section .button-ok,
 .status-section .button-browse {
-  /* .text-section .button-ok,
-.text-section .button-browse { */
   display: none;
   flex: none;
   font-size: 1em;
   margin: 0;
 }
+
+.source-section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center; /* Vertically align all items */
+  justify-content: flex-start; /* Align items to the left */
+  width: 100%;
+  padding: 3px 3px;
+  box-sizing: border-box;
+}
+
+.source-section label,
+.source-section input,
+.source-section select,
+.source-section button {
+  margin: 0;
+  vertical-align: middle;
+  align-items: center;
+  display: flex;
+}
+
 .controls-section button:disabled {
   background: #bdbdbd;
   color: #888;
@@ -419,7 +428,6 @@ button[disabled] {
 .video-url-input,
 .button-ok {
   font-size: 1em;
-  /* min-width: 180px; */
   max-width: 100%;
   box-sizing: border-box;
 }
@@ -431,14 +439,11 @@ button[disabled] {
   margin-bottom: 10px;
   flex-wrap: wrap;
 }
-#video-source,
+/* #video-source,
 #ip-camera-url {
   width: 200px;
-  /* width: 100%; */
-  /* min-width: 200px; */
-  /* max-width: 200px; */
   box-sizing: border-box;
-}
+} */
 .video-source-section {
   margin-left: auto;
   margin-right: auto;
@@ -454,7 +459,6 @@ button[disabled] {
   border-radius: 5px;
   background-color: #fff;
   color: #333;
-  transition: border-color 0.2s, background-color 0.2s;
 }
 .video-source-section select:hover {
   border-color: #3498db;
