Update: app/css/styles_main.css

--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -607,6 +607,7 @@ button[disabled] {
   background: #fff;
   box-sizing: border-box;
   margin-bottom: 2px;
+  /* text-align: left; */
 }
 .dropdown-select::after {
   content: "";
