--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -230,6 +230,9 @@ input:checked + .slider:before {
   margin: 10px 0px 15px 0px;
 }
 .video-feed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 100%;
   /* Adjusted for horizontal layout */
@@ -242,13 +245,9 @@ input:checked + .slider:before {
   /* Adjusted for horizontal layout */
   /* Adjusted for horizontal layout */
   /* Adjusted for horizontal layout */
-
   background: #222;
   border-radius: 8px;
   border: 2px solid #444;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
   min-height: 150px;
 }
@@ -259,6 +258,17 @@ input:checked + .slider:before {
   color: #888;
   font-size: 1.3em;
   z-index: 1;
+}
+#overlay,
+#image-file-viewer,
+#video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Preserves aspect ratio */
+  display: block;
 }
 .group-frame-source,
 .group-frame-mode,
