Update: app/css/styles_main.css, app/js/detect_grade.js, app/js/detect_grade_processing.js, app/js/detect_loop.js, app/js/detect_text_processing.js, app/js/include_html.js, app/js/include_html0.js, app/js/init_system.js, app/pages/grade.html, index.html, resources/exam/exam0.jpg

--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -274,6 +274,7 @@ input:checked + .slider:before {
 .group-frame-mode,
 .group-frame-status,
 .group-frame-text,
+.group-frame-grade,
 .group-frame-object,
 .group-frame-command,
 .group-frame-voice,
@@ -299,6 +300,7 @@ input:checked + .slider:before {
 .group-frame-mode label,
 .group-frame-status label,
 .group-frame-text label,
+.group-frame-grade label,
 .group-frame-object label,
 .group-frame-command label,
 .group-frame-voice label,
@@ -868,6 +870,7 @@ body.dark-mode .controls-section button:disabled {
   .group-frame-source,
   .group-frame-mode,
   .group-frame-text,
+  .group-frame-grade,
   .group-frame-object,
   .group-frame-status,
   .group-frame-command,
