--- a/app/css/styles_main.css
+++ b/app/css/styles_main.css
@@ -23,6 +23,7 @@ body {
 }
 h1 {
   font-size: 2.5em;
+  text-align: center;
   margin-top: 0px;
   margin-bottom: 20px;
   padding: 10px;
@@ -31,13 +32,15 @@ h1 {
   background-color: #f0f0f0;
 }
 h2 {
-  font-size: 2em;
+  font-size: 1.5em !important;
+  text-align: center;
   margin-top: 0px;
   margin-bottom: 15px;
   color: #2980b9;
 }
 h3 {
-  font-size: 1.5em;
+  font-size: 1.3em !important;
+  text-align: center;
   padding: 10px;
   border-radius: 5px;
   margin-top: 5px;
@@ -45,8 +48,9 @@ h3 {
   color: #2980b9;
 }
 h4 {
-  font-size: 1.1em;
+  font-size: 1.1em !important ;
   font-weight: normal;
+  text-align: center;
   margin-top: 0px;
   margin-bottom: 15px;
   color: #2980b9;
