Update: app/css/styles_media.css, app/js/selector_object.js

--- a/app/css/styles_media.css
+++ b/app/css/styles_media.css
@@ -169,6 +169,7 @@
   #video-source,
   #ip-camera-url,
   #video-unit,
+  #object-dropdown,
   .video-url-input,
   .button-ok,
   .button-browse {
